tests/shouldfail/InvalidPrimitive/InvalidPrimitive.hs
module InvalidPrimitive where
import Clash.Prelude

topEntity = True
